package com.example.ledgerpay.feature.ledger

import androidx.compose.material3.Text
import androidx.compose.runtime.Composable

@Composable
fun LedgerScreen() {
    Text("Ledger Screen")
}
