<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="create_intent_button">Create Intent</string>
    <string name="intent_label_prefix">Intent: %1$s</string>
    <string name="error_prefix">Error: %1$s</string>
    <string name="loading_description">Loading payment status</string>
    <string name="payment_item_description">Payment of %1$s %2$s with ID %3$s</string>
</resources>
